--- a/HikikomoriShop.UI/Views/_ViewImports.cshtml
+++ b/HikikomoriShop.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using HikikomoriShop
-@using HikikomoriShop.Models
+﻿@using HikikomoriShop.UI
+@using HikikomoriShop.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
