--- a/HikikomoriShop.UI/Views/Shared/Footer.cshtml
+++ b/HikikomoriShop.UI/Views/Shared/Footer.cshtml
@@ -14,8 +14,8 @@
                 <div class="footer__nav">
                     <ul>
                         <li class="active"><a asp-action="Index" asp-controller="Home">Homepage</a></li>
-                        <li><a asp-area="" asp-controller="" asp-action="Index">Categories</a></li>
-                        <li><a asp-area="" asp-controller="" asp-action="Index">Our Blog</a></li>
+                        <li><a asp-area="" asp-controller="Category" asp-action="Index">Categories</a></li>
+                        <li><a asp-area="" asp-controller="Blog" asp-action="Index">Our Blog</a></li>
                         <li><a href="#">Contacts</a></li>
                     </ul>
                 </div>
